--- a/styles/main.css
+++ b/styles/main.css
@@ -1,22 +1,97 @@
-.ownfish {
+.title {
+    text-align: center;
+    font-size:xx-large;
     border: 1px solid black;
-    width: 66%;
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    margin-bottom: 10px;
+    border-radius: 50px;
+    
+    
+    
 }
 
-.tips {
+.own {
+    text-align: center;
     border: 1px solid black;
-    width: 33%;
-    float: inline-end;
+    border-radius: 50px;
+    width: 30%;
+    margin: auto;
+    margin-top: 10px;
+    background-color: #F69B81  ;
+    
+}
+
+.ownFish__card {
+    border: 1px solid black;
+    background-color: aqua;
+    border-radius: 10px;
+     
+    
+}
+
+
+.tips__card {
+    border: 1px solid black;
+    height: 100%;
+    margin-left: 10px;    
 }
 
 .quotes {
     border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.body {
+.fishCard {
     border: 1px solid black;
+    border-radius: 10px;
+    display: flex;
+    width: 75%;
+    padding: 10px;
+    margin: auto;
+    margin-bottom: 20px;
+    background-color:#F69B81;
+    box-shadow: 3px 3px 10px;
+    
+}
+
+
+.fishImg__container {
+    width: 35%;
+    height: 35%;
+    /* border: 1px solid black; */
+    
 }
 
 .fishImg {
-    width: 50%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    border: 1px solid black;
+    
+  
+}
+.fishText {
+   /* border: 1px solid black; */
+   width: 80%;
+   margin: 10px;
+   text-align: center;
+   font-size: larger;
+}
+
+
+.fish_and_Tips {
+    margin-bottom: 10px;
+    display: flex;
+    /* flex-wrap: wrap;
+    justify-content:; */
+}
+
+
+.text_bold {
+    font-weight: bold;
 }
